--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@floating-ui/dom": "^1.2.8",
-    "@skeletonlabs/skeleton": "workspace:^",
+    "@skeletonlabs/skeleton": "workspace:*",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-vercel": "^2.4.3",
     "@sveltejs/kit": "^1.5.0",
