--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "install": "node scripts/adjust-packages.mjs",
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "swapdeps && vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -16,6 +15,7 @@
   },
   "devDependencies": {
     "@floating-ui/dom": "^1.2.8",
+    "@niktekio/swapdeps": "^1.0.0",
     "@skeletonlabs/skeleton": "workspace:*",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-vercel": "^2.4.3",
