--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "install": "echo 'install running' && node ./scripts/swapdeps.mjs",
+    "install": "pnpm swapdeps"
+    "installer": "echo 'install running' && node ./scripts/swapdeps.mjs",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@floating-ui/dom": "^1.2.8",
+    "@niktekio/swapdeps": "^1.0.0",
     "@skeletonlabs/skeleton": "workspace:^",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-vercel": "^2.4.3",
