--- a/package.json
+++ b/package.json
@@ -1,47 +1,45 @@
 {
-  "name": "niktek.io",
-  "version": "0.0.2",
+  "name": "skeleton-app",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "install": "node ./scripts/swapdeps.mjs",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
-    "dep": "vercel build && vercel deploy --prebuilt",
-    "prod": "vercel build --prod && vercel deploy --prebuilt --prod"
+    "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@floating-ui/dom": "^1.2.8",
-    "@skeletonlabs/skeleton": "workspace:^",
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-vercel": "^2.4.3",
-    "@sveltejs/kit": "^1.5.0",
+    "@sveltejs/kit": "^1.20.4",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.26.0",
-    "highlight.js": "^11.7.0",
-    "is-ci": "^3.0.1",
-    "postcss": "^8.4.23",
+    "eslint-plugin-svelte": "^2.30.0",
     "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "tailwindcss": "^3.3.2",
+    "prettier-plugin-svelte": "^2.10.1",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0"
+    "vite": "^4.4.2",
+    "postcss": "8.4.26",
+    "autoprefixer": "10.4.14",
+    "tailwindcss": "3.3.3",
+    "@skeletonlabs/skeleton": "1.10.0",
+    "mdsvex": "0.11.0",
+    "@tailwindcss/typography": "0.5.9",
+    "@tailwindcss/forms": "0.5.4"
+  },
+  "type": "module",
+  "dependencies": {
+    "highlight.js": "11.8.0",
+    "@floating-ui/dom": "1.4.5"
   },
   "deployConfig": {
-    "devDependencies": {
-      "@skeletonlabs/skeleton": "^1.0.0"
-    }
-  },
-  "type": "module"
+    
+  }
 }
